# deepl-haystack

./: .gitignore  .pre-commit-config.yaml  .pre-commit-sync.json  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump.yml  lint.yml  publish.yml  test.yml
deepl_haystack/: __init__.py  components.py
deepl_haystack/components/translators/deepl/: translator.py
tests/: __init__.py  conftest.py  test_deepl_document_translator.py  test_deepl_haystack.py  test_deepl_haystack_init.py  test_deepl_text_translator.py
